# tee-benchmark

./: .gitignore  CMakeLists.txt  README.md  algo.cpp  algo.hpp  install.sh  main.cpp  tee_benchmark
cloud/: install.sh
file/: install.sh  read_run.sh  write_run.sh
